--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "o1js-base64",
-  "version": "0.0.3",
+  "version": "0.1.0",
   "description": "",
   "author": "",
   "license": "Apache-2.0",
@@ -12,6 +12,7 @@
     "zkapp",
     "base64",
     "decode",
+    "encode",
     "zk",
     "zkSNARK",
     "zero knowledge"
